# SpotiStats

./: .gitignore  .pdm.toml  README.md  pyproject.toml
SpotiStats/: __init__.py  __main__.py  spotify.py  test.py  utils.py
SpotiStats.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
