[tool.pdm]

[project]
name = "SpotiStats"
version = "0.1.2"
description = ""
authors = [
    {name = "jaypyles", email = "jpylesbusiness@gmail.com"},
]
dependencies = ['requests', 'python-dotenv', 'click', 'jsonpath_ng']
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.entrypoints]
SpotiStats = "SpotiStats.__main__:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
